--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/_Imports.razor
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorChartJsWrapper.Demo
 @using BlazorChartJsWrapper.Demo.Shared
+@using BlazorChartJsWrapper.Demo.JsFiles
+@using ChartJsWrapper
