data can now be input from Blazor App instead of just rendering a static chart

--- a/JAS.ChartJs.Blazor/ChartJsWrapper/PieChart.razor
+++ b/JAS.ChartJs.Blazor/ChartJsWrapper/PieChart.razor
@@ -1,2 +1,1 @@
-﻿<canvas id="pieChart" width="400" height="200"></canvas>
-<button @onclick="DeleteChart">   DELETE CHART   </button>
+﻿<canvas id="pieChart"></canvas>
