--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
@@ -8,3 +8,25 @@
 <Component1></Component1>
 <Component2></Component2>
 <PieChart></PieChart>
+<BarChart CanvasId="barChart" Config="@BarConfig" />
+
+
+@code {
+    private object BarConfig = new
+    {
+        type = "bar",
+        data = new
+        {
+            labels = new[] { "Red", "Blue", "Yellow", "Orange" },
+            datasets = new[]
+            {
+                new {
+                    label = "Votes",
+                    data = new[] { 12, 19, 3, 41 },
+                    backgroundColor = new[] { "#ff6384", "#36a2eb", "#ffce56", "#ff8800"  }
+                }
+        }
+        },
+        options = new { responsive = true }
+    };
+}
