started creating all necessary files for overhaul

--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
@@ -23,7 +23,18 @@
                 new {
                     label = "Votes",
                     data = new[] { 12, 19, 3, 41 },
-                    backgroundColor = new[] { "#ff6384", "#36a2eb", "#ffce56", "#ff8800"  }
+                    backgroundColor = new[] { "rgba(255, 99, 132, 0.2)",
+                                               "rgba(255, 159, 64, 0.2)",
+                                               "rgba(255, 205, 86, 0.2)",
+                                               "rgba(75, 192, 192, 0.2)" 
+                    },
+                     borderColor = new[] {
+                                  "rgb(255, 99, 132)",
+                                  "rgb(255, 159, 64)",
+                                  "rgb(255, 205, 86)",
+                                  "rgb(75, 192, 192)"
+                     },
+                     borderWidth =  2
                 }
         }
         },
