--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/Index.razor
@@ -8,7 +8,7 @@
 <Component1></Component1>
 <Component2></Component2>
 <PieChart></PieChart>
-<BarChart CanvasId="barChart" Config="@BarConfig" />
+<BarChart CanvasId="barChart" Config="@BarConfig"> </BarChart>
 
 
 @code {
