--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/_Imports.razor
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/_Imports.razor
@@ -5,4 +5,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using BlazorChartJsWrapper.Demo
+@using BlazorChartJsWrapper.Demo.Shared
 @using ChartJsWrapper
