--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/_Host.cshtml
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/Pages/_Host.cshtml
@@ -14,15 +14,6 @@
     <link href="BlazorChartJsWrapper.Demo.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
-    <!-- Default theme -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css" />
-    <!-- Semantic UI theme -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/semantic.min.css" />
-    <!-- Bootstrap theme -->
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/bootstrap.min.css" />
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -39,9 +30,12 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
+
+    <!-- Chart.js library reference-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+    <!-- Path to my js interop file -->
+    <script src="_content/ChartJsWrapper/ChartJsInterop.js"></script>
+
 
 </body>
 </html>
